lib/musicality/notation/parsing/link_parsing.treetop
module Musicality
module Parsing

grammar Link
  include Pitch

  rule link
    tie / glissando / portamento
  end
  
  rule tie
    "=" <TieNode>
  end
  
  rule glissando
    "~" pitch <GlissandoNode>
  end
  
  rule portamento
    "|" pitch <PortamentoNode>
  end
end

end
end
